--- a/JavaScript 深度剖析/code/package.json
+++ b/JavaScript 深度剖析/code/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "folktale": "^2.3.2",
-    "lodash": "^4.17.21"
+    "html-webpack-plugin": "^4.5.2",
+    "lodash": "^4.17.21",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
