--- a/JavaScriptDeep/code/package.json
+++ b/JavaScriptDeep/code/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.8",
+    "@babel/preset-flow": "^7.16.7",
     "flow-bin": "^0.174.1",
     "folktale": "^2.3.2",
     "html-webpack-plugin": "^4.5.2",
@@ -17,5 +20,9 @@
     "webpack": "^4.46.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
+  },
+  "devDependencies": {
+    "flow-remove-types": "^2.174.1",
+    "typescript": "^4.6.3"
   }
 }
