--- a/Node/code/demo-node/package.json
+++ b/Node/code/demo-node/package.json
@@ -2,14 +2,16 @@
   "name": "demo-node",
   "version": "0.1.0",
   "description": "",
-  "main": "app.js",
+  "main": "a.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "lyn",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.1"
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   }
 }
